--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.15.3",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
+    "mathjs": "^5.10.0",
     "screenfull": "^3.3.3",
     "style-loader": "^0.23.1",
     "vue": "^2.2.1",
